# BubbleID-cpp

./: .gitignore  CMakeLists.txt  INSTALL.md  PACKAGE_INFO.md  README.md  README.zh-CN.md  install.sh
data/: README.md
examples/: example.cpp
include/bubbleID/: bubbleID.h
include/bubble_id/: bubble_id.h
include/ocsort/: Association.hpp  KalmanBoxTracker.hpp  KalmanFilter.hpp  LapJv.hpp  OCSort.hpp  Utilities.hpp
include/yolov8_seg/: yolov8_seg_onnx.h  yolov8_seg_utils.h
src/: bubbleID.cpp  yolov8_seg_onnx.cpp
src/bubble_id/: bubble_id.cpp
src/ocsort/: Association.cpp  KalmanBoxTracker.cpp  KalmanFilter.cpp  LapJv.cpp  OCSort.cpp  Utilities.cpp  lapjv.cpp
src/yolov8_seg/: yolov8_seg_onnx.cpp  yolov8_seg_utils.cpp
